--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,7 @@
 .carousel-inner img {
   margin: auto;
 }
+
+  .gradient-custom-4 {
+  background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
+  }
