--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,7 @@
   .gradient-custom-4 {
   background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
   }
+
+  .text-center{
+    
+  }
