added checkout page

--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,18 @@
   background: linear-gradient(to right, rgba(132, 250, 176, 1), rgba(143, 211, 244, 1))
   }
 
-  .text-center{
-    
+  .col mb-4{
+    height: 10px;;
   }
+  
+  .bg {
+
+    background-image: url("https://mdbootstrap.com/img/Photos/Others/background.webp");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background: -webkit-linear-gradient(45deg, rgba(15, 213, 121, 0.911), rgba(2, 5, 172, 0.839) 100%);
+  }
+    
+    
