--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 .carousel-inner img {
   margin: 25px;
   
@@ -64,4 +63,17 @@ h1{
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 90%;
+}
+
+
+
+.fw-normal{
+  color: rgb(56, 18, 18)
+}
+.col-md-5{
+  padding: 30px;
+}
+.new{
+  padding: 50px;
+  margin: auto;
 }
